--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <main>
       <div id="imageSection">
-        <img id="imageSection1" src="" alt="" title=""/>
-      <!--  <img src="" alt="" title=""/>
-        <img src="" alt="" title=""/> -->
+        <img id="image1" src="" alt="" title=""/>
+        <img id="image2" src="" alt="" title=""/>
+        <img id="image3" src="" alt="" title=""/> 
       </div>
     </main>
   </body>
