--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   </head>
 
   <body>
+    <header>
+      <h1>Welcome to Bus Mall</h1>
+      <p> Please cast your votes on which item, you will be most likely to buy, by clicking on the image  </p>
+    </header>
     <main>
+      <section id="result">
+
+      </section>
       <div id="imageSection">
         <img id="image1" src="" alt="" title=""/>
         <img id="image2" src="" alt="" title=""/>
