added the result function

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
       <p> Please cast your votes on which item, you will be most likely to buy, by clicking on the image  </p>
     </header>
     <main>
-      <section id="result">
-
-      </section>
       <div id="imageSection">
         <img id="image1" src="" alt="" title=""/>
         <img id="image2" src="" alt="" title=""/>
         <img id="image3" src="" alt="" title=""/> 
       </div>
+      <section id="result">
+        <h2 id="votingResultText"></h2>
+        <ul id="votingResult">
+        </ul>
+      </section>
     </main>
   </body>
 
