added the chart

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title></title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
   </head>
 
   <body>
@@ -22,8 +23,9 @@
         </ul>
       </section>
     </main>
-  </body>
 
+    <canvas id="votingResultChart" width="800px" height="400px"></canvas>
+    <script src="app.js"></script>
+  </body>
   <footer></footer>
-  <script src="app.js"></script>
 </html>
