added local storage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <h1>Welcome to Bus Mall</h1>
       <p> Please cast your votes on which item, you will be most likely to buy, by clicking on the image  </p>
+      <button id="clearLocalStorage">Clear Local Storage</button>
     </header>
     <main>
       <div id="imageSection">
